tests/models/enum/unnamed/unit/fail/validate.stderr
error: Support condition is alias, default
 --> tests/models/enum/unnamed/unit/fail/validate.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `Result`
 --> tests/models/enum/unnamed/unit/fail/validate.rs:1:19
  |
1 | use dade::{model, Result};
  |                   ^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
